--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ $color-link-dark: rgb(38, 77, 148);
 $color-lightgrey: rgba(0, 0, 0, .4);
 $font-family-sans: 'acumin-pro', helvetica, arial;
 $font-family-serif: 'playfair-display', georgia, times;
+$font-family-headline: brandon-grotesque, sans-serif;
+
 
 // BREAKPOINTS 
 
