--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -73,11 +73,9 @@ section {
     color: white;
     position: relative;
     overflow: hidden;
-    width: 100%;
-    height: auto;
     .front {
         position: absolute;
-        top: 0;
+        top: -1px;
         right: 0;
         z-index: 1;
     }
@@ -88,12 +86,18 @@ section {
         z-index: -1;
     }
     h1 {
-        margin-bottom: 3.9em;
         font-family: $font-family-headline;
         font-size: 3em;
         color: white;
-        max-height: 100vh !important;
         width: 100%;
+        margin-top: -2.5em;
+        margin-bottom: 0;
+    }
+
+    h3 {
+        font-family: $font-family-headline;
+        color: white;
+        font-weight: 400;
     }
 
     p {
